core-apps/base/minio-tenant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    v1.min.io/tenant: prod-minio-tenant
  name: prod-minio-tenant-hl-nodeport
  namespace: prod-minio
spec:
  type: NodePort
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http-minio
      nodePort: 32000
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    v1.min.io/tenant: prod-minio-tenant
  sessionAffinity: None
